--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
-        <title>Arrays - Estdo sobre Strings</title>
+        <title>Jogo Da Forca em JavaScriipt</title>
     </head>
     <body>
-        <div id="exibe_form">
-            <table id="tbody"></table>
-            <button onclick="reiniciarJogo()" id="bt_novo_jogo">NOVO JOGO</button>
-        </div>
-        <div id="exibe_palavra"></div>
         <div id="boneco">
             <img src="img/forca.svg" width="250px" alt="">
         </div>
+        <div id="exibe_palavra"></div>
         <div id="chute">
             <input type="text" name="" id="digita_chute" maxlength="1">
             <button onclick="verifica()" type="submit" id="bt_chute">CHUTAR</button>
@@ -23,6 +19,11 @@
         
         <div id="txtErradas">Letras Erradas</div>
         <div class="letras_erradas"></div>
+        <br><br>
+        <div id="exibe_form">
+            <table id="tbody"></table>
+            <button onclick="reiniciarJogo()" id="bt_novo_jogo">NOVO JOGO</button>
+        </div>
         <br><br>
         <div id="inserir_palavra">
             <input id="insere_palavra" type="text" placeholder="">
