--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
             <button onclick="inserirPalavra()" type="submit">INSERIR</button>
         </div>
         <script src="js/script.js" defer></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     </body>
 </html>
