--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="boneco">
-            <img src="img/forca.svg" width="250px" alt="" id="trocaImg">
+            <img src="img/forca.svg" alt="" id="trocaImg">
         </div>
         <div id="exibe_palavra"></div>
         <div id="chute">
