--- a/index.html
+++ b/index.html
@@ -8,29 +8,30 @@
         <title>Jogo Da Forca em JavaScriipt</title>
     </head>
     <body>
-        <div id="boneco">
-            <img src="img/forca.svg" alt="" id="trocaImg">
+        <div id="boneco"><img alt="" id="trocaImg">
+            <div id="flutua" class="esconde">
+                <div id="exibe_palavra"></div>
+                <div id="chute">
+                    <input type="text" name="" id="digita_chute" maxlength="1">
+                    <button onclick="verifica()" type="submit" id="bt_chute">CHUTAR</button>
+                </div>
+                <div id="campoVazio" class="alerta">&nbsp;</div>
+                <div id="ultimaChance" class="alerta">&nbsp;</div>
+                <div class="letras_erradas">&nbsp;</div>
+                <div id="exibe_form">
+                    <button onclick="reiniciarJogo()" id="bt_novo_jogo">NOVO JOGO</button>
+                </div>
+            </div>
+            <div id="resultado">
+                <div id="informa"></div>
+                <button onclick="reiniciarJogo()" id="bt_novo_jogo">NOVO JOGO</button>
+            </div>
+            
         </div>
-        <div id="exibe_palavra"></div>
-        <div id="chute">
-            <input type="text" name="" id="digita_chute" maxlength="1">
-            <button onclick="verifica()" type="submit" id="bt_chute">CHUTAR</button>
-        </div>
-        
-        <div id="campoVazio" class="alerta"></div>
-        <div id="ultimaChance" class="alerta"></div>
-        <div id="txtErradas"></div>
-        <div class="letras_erradas"></div>
-        <br><br>
-        <div id="exibe_form">
-            <table id="tbody"></table>
-            <button onclick="reiniciarJogo()" id="bt_novo_jogo">NOVO JOGO</button>
-        </div>
-        <br><br>
-        <div id="inserir_palavra">
+       <!--  <div id="inserir_palavra">
             <input id="insere_palavra" type="text" placeholder="">
             <button onclick="inserirPalavra()" type="submit">INSERIR</button>
-        </div>
+        </div> -->
         <script src="js/script.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     </body>
