--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
                     <button onclick="verifica()" type="submit" id="bt_chute">CHUTAR</button>
                 </div>
                 <div id="avisos">
-                    <button onclick="reiniciarJogo()" class="bt_novo_jogo">NOVO JOGO</button>
                     <div id="campoVazio" class="alerta">&nbsp;</div>
-                    <div id="ultimaChance" class="alerta">&nbsp;</div>
                     <div class="letras_erradas">&nbsp;</div>
+                    <button onclick="reiniciarJogo()" class="bt_novo_jogo">NOVO JOGO</button>
                 </div>
             </div>
             <div id="resultado">
@@ -27,10 +26,10 @@
                 <button onclick="reiniciarJogo()" class="bt_novo_jogo">Jogue Novamente</button>
             </div>
         </div>
-       <!--  <div id="inserir_palavra">
+       <div id="inserir_palavra">
             <input id="insere_palavra" type="text" placeholder="">
             <button onclick="inserirPalavra()" type="submit">INSERIR</button>
-        </div> -->
+        </div>
         <script src="js/script.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     </body>
