Ajustes no Storage

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button onclick="reiniciarJogo()" class="bts">Jogue Novamente</button>
             </div>
         </div>
-        <button id="btmais"onclick="popup()" class="bts">mais Palavras</button>
+        <button id="btmais" onclick="popup()" class="bts">mais Palavras</button>
 
         <div id="inserir_palavra">
             <div id="fundo_popup">
@@ -47,10 +47,10 @@
                 </div>
             </div>
         </div>
-        <button id="verPalavras"type="submit" onclick="mostraPalavras()">Ver Palavras</button>
-
-
+        <button id="verPalavras" type="submit" onclick="mostraPalavras()">Ver Palavras</button>
         <script src="js/script.js" defer></script>
+        <script src="js/insere_palavras.js" defer></script>
+        <script src="js/mostra_palavras.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <table id="tbody"></table>
     </body>
