--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta property="og:description" content="Jogo da Forca Feito em JavaScript - Esse Projeto faz Parte do Curso de Programação da Alura / Oracle">
         <meta property="og:url" content="https://euclides981.github.io/jogo-da-forca/">
         <meta name="twitter:card" content="summary_large_image">
-        <title>Jogo Da Forca em JavaScriipt</title>
+        <title>Jogo Da Forca Em JavaScriipt</title>
     </head>
     <body>
         <div id="boneco"><img alt="" id="trocaImg">
