--- a/index.html
+++ b/index.html
@@ -21,68 +21,70 @@
         <title>Jogo Da Forca Em JavaScriipt</title>
     </head>
     <body>
-        <div id="boneco"><img alt="" id="trocaImg">
-            <div id="flutua" class="esconde">
-                <div id="exibe_palavra"></div>
-                <div id="chute">
-                    <input type="text" name="" id="digita_chute" maxlength="1">
-                    <button onclick="verifica()" type="submit" class="bts" id="bt_chute">Chutar</button>
+        <div class="container">
+            <div id="boneco"><img alt="" id="trocaImg">
+                <div id="flutua" class="esconde">
+                    <div id="exibe_palavra"></div>
+                    <div id="chute">
+                        <input type="text" name="" id="digita_chute" maxlength="1">
+                        <button onclick="verifica()" type="submit" class="bts" id="bt_chute">Chutar</button>
+                    </div>
+                    <div id="avisos">
+                        <div id="campoVazio" class="alerta">&nbsp;</div>
+                        <div class="letras_erradas">&nbsp;</div>
+                        <button onclick="reiniciarJogo()" class="bts_novo_jogo">Novo Jogo</button>
+                        <div id="doisBotoes">
+                            <button id="btmais" onclick="popup()" class="btsVerde">Adicionar Palavras</button>
+                            <button id="verPalavras" type="submit" class="btsVermelho" onclick="mostraPalavras()">Espiar Palavras</button>
+                        </div>
+                    </div>
                 </div>
-                <div id="avisos">
-                    <div id="campoVazio" class="alerta">&nbsp;</div>
-                    <div class="letras_erradas">&nbsp;</div>
-                    <button onclick="reiniciarJogo()" class="bts">Novo Jogo</button>
-                    <div id="doisBotoes">
-                        <button id="btmais" onclick="popup()" class="btsVerde">Adicionar Palavras</button>
-                        <button id="verPalavras" type="submit" class="btsVermelho" onclick="mostraPalavras()">Espiar Palavras</button>
+                <div id="meusLinks"> 
+                    <a href="https://github.com/euclides981" target="_blank"><img src="https://euclides981.github.io/img/github.svg" class="bt_links" title="Perfil GitHub" alt="Perfil GitHub"></a>
+                    <a href="https://www.linkedin.com/in/euclides981/" target="_blank"><img src="https://euclides981.github.io/img/linkedin.svg" class="bt_links" title="Perfil Linkedin" alt="Perfil Linkedin"></a>
+                    <a href="https://euclides981.github.io/criptografia/" target="_blank"><img src="https://euclides981.github.io/img/logoCripto.svg" class="bt_links" title="Criptografia - Primeiro Desafio Alura" alt="Criptografia"></a>
+                </div>
+                <div id="resultado">
+                    <div id="informa"></div>
+                    <button onclick="reiniciarJogo()" class="bts">Jogue Novamente</button>
+                </div>
+            </div>
+            <div id="inserir_palavra">
+                <div id="fundo_popup">
+                    <div id="tes">
+                        <div id="bt_fecha">
+                            <button id="fechar"type="submit" title="FECHAR" onclick="fechaPopup()">X</button>
+                        </div>
+                        <div class="frases">Insira Suas Palavras</div>
+                        <div id="inputInserir">
+                            <input id="insere_palavra" type="text">
+                            <button onclick="inserirPalavra()" type="submit" class="bts_inserir">INSERIR</button>
+                        </div>
+                        <div class="frases">Jogue Com Suas Palavras</div>
+                        <button id="opcaoUsuario"type="submit" class="btsVerde">Minhas palavras</button>
+                        <div class="frases">Jogue Com as Palavras do Sistema</div>
+                        <button id="opcaoSistema"type="submit" class="btsVerde">Palavras do Sistema</button>
+                        <div class="frases">Jogue Com Todas Palavras Misturadas</div>
+                        <button id="opcaoMisturada"type="submit" class="btsVerde">Misturado</button>
+                        <div class="frases">Excluir Suas Palavras</div>
+                        <button id="opcaoExcluir"type="submit" onclick="excluiBanco()" class="btsVermelho">Excluir</button>
                     </div>
                 </div>
             </div>
-            <div id="meusLinks"> 
-                <a href="https://github.com/euclides981" target="_blank"><img src="https://euclides981.github.io/img/github.svg" class="bt_links" title="Perfil GitHub" alt="Perfil GitHub"></a>
-                <a href="https://www.linkedin.com/in/euclides981/" target="_blank"><img src="https://euclides981.github.io/img/linkedin.svg" class="bt_links" title="Perfil Linkedin" alt="Perfil Linkedin"></a>
-                <a href="https://euclides981.github.io/criptografia/" target="_blank"><img src="https://euclides981.github.io/img/logoCripto.svg" class="bt_links" title="Criptografia - Primeiro Desafio Alura" alt="Criptografia"></a>
-            </div>
-            <div id="resultado">
-                <div id="informa"></div>
-                <button onclick="reiniciarJogo()" class="bts">Jogue Novamente</button>
-            </div>
-        </div>
-        <div id="inserir_palavra">
-            <div id="fundo_popup">
-                <div id="tes">
+            <div id="espiar">
+                <div id="fundo_tabela">
                     <div id="bt_fecha">
                         <button id="fechar"type="submit" title="FECHAR" onclick="fechaPopup()">X</button>
                     </div>
-                    Insira Suas Palavras
-                    <div id="inputInserir">
-                        <input id="insere_palavra" type="text">
-                        <button onclick="inserirPalavra()" type="submit" class="bts">INSERIR</button>
-                    </div>
-                    Jogue Com Suas Palavras
-                    <button id="opcaoUsuario"type="submit" class="btsVerde">Minhas palavras</button>
-                    Jogue Com as Palavras do Sistema
-                    <button id="opcaoSistema"type="submit" class="btsVerde">Palavras do Sistema</button>
-                    Jogue Com Todas Palavras Misturadas
-                    <button id="opcaoMisturada"type="submit" class="btsVerde">Misturado</button>
-                    Excluir Suas Palavras
-                    <button id="opcaoExcluir"type="submit" onclick="excluiBanco()" class="btsVermelho">Excluir</button>
+                    Gostaria de ver as Palavras Secretas?
+                    <button class="btsVermelho" onclick="mostraPalavrasDoSistema()">Sim, me Mostre as Palavras</button>
+                    <button class="btsVermelho" onclick="mostraMinhasPalavras()">Mostre Só as Minhas</button>
+                    <button class="btsVermelho" onclick="mostraTodasPalavras()">Mostre todas Palavras</button>
+                    <textarea rows="12" id="mostra_secretas" disabled></textarea>
                 </div>
             </div>
+            <div id="topo"><h3>JOGO DA FORCA - ALURA - ORACLE</h3></div>
         </div>
-        <div id="espiar">
-            <div id="fundo_tabela">
-                <div id="bt_fecha">
-                    <button id="fechar"type="submit" title="FECHAR" onclick="fechaPopup()">X</button>
-                </div>
-                Gostaria de ver as Palavras Secretas?
-                <button class="btsVermelho" onclick="mostraPalavrasDoSistema()">Sim, me Mostre as Palavras</button>
-                <button class="btsVermelho" onclick="mostraMinhasPalavras()">Mostre Só as Minhas</button>
-                <button class="btsVermelho" onclick="mostraTodasPalavras()">Mostre todas Palavras</button>
-                <textarea rows="12" id="mostra_secretas" disabled></textarea>
-            </div>
-        </div>
-        <div id="topo"><h3>JOGO DA FORCA</h3></div>
         <script src="js/script.js" defer></script>
         <script src="js/local_storage.js" defer></script>
         <script src="js/mostra_palavras.js" defer></script>
