--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="topo2"><h3>JOGO DA FORCA - ALURA - ONE</h3></div>
                 <div id="meusLinks"> 
                     <a href="https://github.com/euclides981" target="_blank"><img src="https://euclides981.github.io/img/github.svg" class="bt_links" title="Perfil GitHub" alt="Perfil GitHub"></a>
                     <a href="https://www.linkedin.com/in/euclides981/" target="_blank"><img src="https://euclides981.github.io/img/linkedin.svg" class="bt_links" title="Perfil Linkedin" alt="Perfil Linkedin"></a>
@@ -51,10 +52,11 @@
             </div>
             <div id="inserir_palavra">
                 <div id="fundo_popup">
-                    <div id="tes">
+                    <div id="botoes_storage">
                         <div id="bt_fecha">
                             <button id="fechar"type="submit" title="FECHAR" onclick="fechaPopup()">X</button>
                         </div>
+                        <div id="alert">Local Storage</div>
                         <div class="frases">Insira Suas Palavras</div>
                         <div id="inputInserir">
                             <input id="insere_palavra" type="text">
@@ -83,7 +85,7 @@
                     <textarea rows="12" id="mostra_secretas" disabled></textarea>
                 </div>
             </div>
-            <div id="topo"><h3>JOGO DA FORCA - ALURA - ORACLE</h3></div>
+            <div id="topo"></div>
         </div>
         <script src="js/script.js" defer></script>
         <script src="js/local_storage.js" defer></script>
