--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                         </div>
                     </div>
                 </div>
-                <div id="topo2"><h3>JOGO DA FORCA - ALURA - ONE</h3></div>
+                <div id="topo2">JOGO DA FORCA - ALURA - ONE</div>
                 <div id="meusLinks"> 
-                    <a href="https://github.com/euclides981" target="_blank"><img src="https://euclides981.github.io/img/github.svg" class="bt_links" title="Perfil GitHub" alt="Perfil GitHub"></a>
-                    <a href="https://www.linkedin.com/in/euclides981/" target="_blank"><img src="https://euclides981.github.io/img/linkedin.svg" class="bt_links" title="Perfil Linkedin" alt="Perfil Linkedin"></a>
-                    <a href="https://euclides981.github.io/criptografia/" target="_blank"><img src="https://euclides981.github.io/img/logoCripto.svg" class="bt_links" title="Criptografia - Primeiro Desafio Alura" alt="Criptografia"></a>
+                    <a href="https://github.com/euclides981" target="_blank"><img src="img/github.svg" class="bt_links" title="Perfil GitHub" alt="Perfil GitHub"></a>
+                    <a href="https://www.linkedin.com/in/euclides981/" target="_blank"><img src="img/linkedin.svg" class="bt_links" title="Perfil Linkedin" alt="Perfil Linkedin"></a>
+                    <a href="https://euclides981.github.io/criptografia/" target="_blank"><img src="img/logoCripto.svg" class="bt_links" title="Criptografia - Primeiro Desafio Alura" alt="Criptografia"></a>
                 </div>
                 <div id="resultado">
                     <div id="informa"></div>
