--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div id="flutua" class="esconde">
                     <div id="exibe_palavra"></div>
                     <div id="chute">
-                        <input type="text" name="" id="digita_chute" maxlength="1">
+                        <input type="text" name="" id="digita_chute" oninput="maxLen(this)">
                         <button onclick="verifica()" type="submit" class="bts" id="bt_chute">Chutar</button>
                     </div>
                     <div id="avisos">
